# six-tac

./: .dockerignore  .gitignore  .gitmodules  README.md  browser-bots.ts  client.ts  index.html  package-lock.json  package.json  playwright.config.ts  server.ts  service-worker.js  styles.css  tsconfig.json  wrangler.toml
bots/: Cargo.toml  Dockerfile.kraken  README.md  build.rs
bots/data/: seal_pattern_values_full.json
bots/scripts/: apple-ar-wrapper.sh  export_kraken_onnx.py  hexgo_worker.py  krakenbot_worker.py  start_kraken_service.sh
bots/src/: ambrosia.rs  arena.rs  hexgo.rs  hydra.rs  kraken.rs  lib.rs  orca.rs  seal.rs  seal_vendor.rs  seal_vendor_bridge.js  sealbot_ffi.cpp  shared.rs
engine/: Cargo.toml  README.md
engine/src/: lib.rs  main.rs
modal/: kraken_service.py
src/: backend-bots.ts  bot-turn-queue.ts  bot-wasm.d.ts  bots.ts  compute-jobs.ts  engine.ts  env.ts  kraken-container.ts  worker.ts
src/api/: bots.ts  compute.ts  local.ts  matchmaking.ts  sessions.ts  utils.ts
src/client/: api.ts  app-types.ts  app.ts  canvas-input.ts  dom.ts  helpers.ts  local-game.ts  persistence.ts  render.ts  session-controller.ts  session-ui.ts  settings-modal.ts
src/domain/: bot.ts  clock.ts  position.ts  session-state.ts  types.ts
src/durable/: matchmaker-object.ts  rate-limit.ts  session-object.ts
tests/e2e/: lobby.spec.ts
