[package]
name = "six-tac-bots"
version = "0.1.0"
edition = "2021"
description = "Named bots for Six Tac built on top of the core Rust engine"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex-tic-tac-engine = { path = "../engine" }
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.105"
js-sys = "0.3"
