[package]
name = "six-tac-bots"
version = "0.1.0"
edition = "2021"
description = "Named bots for Six Tac built on top of the core Rust engine"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex-tic-tac-engine = { path = "../engine" }
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.105"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ndarray = "0.17"
ort = "2.0.0-rc.12"
rayon = "1.11"

[build-dependencies]
cc = "1.2"
